add_library(${HEADER_FORMATING_LIB_NAME} 
./FullAddressTransactionHeaderFormatting.cpp ./FullAddressTransactionHeaderFormatting.hpp
./ShortAddressTransactionHeaderFormatting.cpp ./ShortAddressTransactionHeaderFormatting.hpp
./FastCommandTransactionHeaderFormatting.cpp ./FastCommandTransactionHeaderFormatting.hpp
./HeaderFormattingDefinition.hpp
)